--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@axelity/sicher.js": "^0.1.0",
+    "buffer": "^5.6.0",
+    "immer": "^9.0.5",
     "next": "11.1.0",
+    "next-translate": "^1.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^8.3.2",
+    "zustand": "^3.5.9"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
+    "@types/uuid": "^8.3.1",
+    "autoprefixer": "^10.3.2",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7",
     "typescript": "4.3.5"
   }
 }
