--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
   },
   "dependencies": {
     "@axelity/sicher.js": "^0.1.0",
-    "buffer": "^5.6.0",
-    "immer": "^9.0.5",
-    "next": "11.1.0",
+    "buffer": "^6.0.3",
+    "immer": "^9.0.6",
+    "next": "^11.1.2",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "uuid": "^8.3.2",
-    "zustand": "^3.5.9"
+    "zustand": "^3.5.10"
   },
   "devDependencies": {
-    "@types/react": "17.0.19",
+    "@types/react": "^17.0.20",
     "@types/uuid": "^8.3.1",
-    "autoprefixer": "^10.3.2",
+    "autoprefixer": "^10.3.4",
     "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.7",
-    "typescript": "4.3.5"
+    "tailwindcss": "^2.2.10",
+    "typescript": "^4.4.2"
   }
 }
